@@ -1,5 +1,9 @@
 2004-10-21  Jean-Louis Martineau <martineau@iro.umontreal.ca>
 
+	* server-src/holding.c (rename_tmp_holding): Always rename files.
+
+2004-10-21  Jean-Louis Martineau <martineau@iro.umontreal.ca>
+
 	* server-src/driver.c: Print message when too many retry.
 	* server-src/amstatus.pl.in: Detect a failed dump after too many retry.
 	* amplot/amplot.awk: Parse these message.
